[package]
name = "sf-rate-limiter"
version = "0.1.0"
edition = "2021"
description = "Request Rate Limiter. The project is a port of Symfony Rate Limiter."
license = "Apache-2.0"
repository = "https://github.com/RichardWGNR/rate-limiter"

[dependencies]
hashbrown = { version = "0.14.5" }
parking_lot = { version = "0.12.3" }
thiserror = { version = "1.0.63" }
chrono = { version = "0.4.38" }
dashmap = { version = "6.0.1" }